--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ __pycache__/
 main-app/src/main/resources/conf
 
 ### Extra Spark Jars ###
-main-app/src/main/resources/lib
+main-app/src/main/resources/lib/*.jar
 
 ### Credentials ###
 main-app/src/main/resources/credentials/*
