--- a/profiles-daemon/skill.yaml
+++ b/profiles-daemon/skill.yaml
@@ -38,7 +38,7 @@ properties:
     description: Update default value to HTTP endpoint path in container
     required: true
     type: String
-    defaultValue: invoke
+    defaultValue: api/v1/profiles/listProfileIds
   - name: daemon.port
     title: Daemon Port
     description: Update default value to port on which app will be running
