--- a/main-app/src/main/resources/conf/driverTemplate.yaml
+++ b/main-app/src/main/resources/conf/driverTemplate.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  labels:
+    owner: ${CONTROLLER_NAME}
   ownerReferences:
     - apiVersion: v1
       controller: true
