cdata + bigquery and datasource-query fix

--- a/main-app/src/main/resources/Dockerfile
+++ b/main-app/src/main/resources/Dockerfile
@@ -4,6 +4,10 @@ FROM $base_img
 USER root
 
 COPY --from=redboxoss/scuttle:latest /scuttle /bin/scuttle
+ENV ENVOY_ADMIN_API=http://localhost:15000
+ENV ISTIO_QUIT_API=http://localhost:15020
+ENV SCUTTLE_LOGGING=false
+
 COPY ./resources/main/python/ .
 RUN pip3 install -r requirements.txt
 
